# Rant-Free-Project

./: .gitignore  bootstrap.sh  docker-compose.yaml
k8s/: configmap.yaml  feast-registry-pvc.yaml  ingress.yaml  kustomization.yaml  model-pvc.yaml  namespace.yaml
k8s/chat-ui/: deployment.yaml  service.yaml
k8s/feast-bootstrap/: job.yaml
k8s/hitl-backend/: deployment.yaml  service.yaml
k8s/model-service/: deployment.yaml  service.yaml
k8s/mongodb/: deployment.yaml  pvc.yaml  service.yaml
k8s/training-service/: job.yaml
services/: .dockerignore
services/chat-ui/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json
services/chat-ui/src/: App.tsx  index.css  types.ts
services/feature-store/: bootstrap.py  feature_definitions.py  feature_store.local.yaml  feature_store.yaml  merge_dataset.py
services/feature-store/feature_repo/: feature_definitions.py  feature_store.yaml  verify.py
services/feature_store/: .dockerignore  Dockerfile  bootstrap.py  feature_definitions.py  feature_store.yaml  pyproject.toml  reader.py  readme.md  store.py
services/hitl-backend/: Dockerfile  db.py  main.py  models.py  requirements.txt
services/hitl-ui/: app.py  appdummy.py  requirements.txt
services/model-service/: .env.example  Dockerfile  README.md  feast_writer.py  feast_writter.py  init_untrained_classifier.py  lang.py  main.py  model.py  pipeline.py  requirements.txt  test_model.py  utils.py
services/monitoring-service/: main.py
services/training-service/: .gitignore  README.md  main.py  requirements.txt  sample.py
(+4 files in other folders)
