[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]        # scan from parent (services/) so feature_store/ is found as a package
include = ["feature_store*"]

[project]
name = "feature_store"
version = "0.1.0"
dependencies = [
    "dask[dataframe]==2024.10.0",
    "feast[mongodb]",
    "pandas",
]